[gd_scene load_steps=8 format=3 uid="uid://0v2s4ifhgy8h"]

[ext_resource type="PackedScene" uid="uid://cved15jmsk7ep" path="res://Scenes/UI/hex_tile_map.tscn" id="1_23a8a"]
[ext_resource type="Script" path="res://Scripts/Managers/game_manager.gd" id="1_88mrd"]
[ext_resource type="PackedScene" uid="uid://c4qar084b8sbt" path="res://Scenes/UI/Overlay/HexMenu.tscn" id="2_yfjim"]
[ext_resource type="PackedScene" uid="uid://bovrdbn26tthk" path="res://Scenes/Enemy/wave_spawner.tscn" id="3_jtl8h"]
[ext_resource type="PackedScene" uid="uid://b4kpjs0vvecns" path="res://Scenes/UI/Overlay/start_button.tscn" id="3_u8lrq"]
[ext_resource type="Script" path="res://Scripts/Managers/Camera_manager.gd" id="6_5fofq"]
[ext_resource type="PackedScene" uid="uid://6c1t8nkvmvi0" path="res://Scenes/UI/Overlay/curreny_label.tscn" id="8_vyvfu"]

[node name="Main" type="Node"]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HexMenu" parent="CanvasLayer/UI" instance=ExtResource("2_yfjim")]
layout_mode = 1

[node name="CurrenyLabel" parent="CanvasLayer/UI" instance=ExtResource("8_vyvfu")]
layout_mode = 1
anchors_preset = 0
anchor_left = 0.0
anchor_right = 0.0
offset_left = 0.0
offset_right = 222.0
grow_horizontal = 1

[node name="StartButton" parent="CanvasLayer/UI" instance=ExtResource("3_u8lrq")]
layout_mode = 1
offset_bottom = 90.0

[node name="GM" type="Node2D" parent="." groups=["game_manager"]]
script = ExtResource("1_88mrd")

[node name="TileMap" parent="GM" instance=ExtResource("1_23a8a")]
position = Vector2(-26, -23.5)
scale = Vector2(0.5, 0.5)
layer_0/tile_data = PackedInt32Array(0, 0, 0, 65535, 0, 0, -1, 0, 0, -65536, 0, 0, -65535, 0, 0, 1, 0, 0, 65536, 0, 0, 65537, 0, 0, 65538, 0, 0, 2, 0, 0, -65534, 0, 0, -131071, 0, 0, -131072, 0, 0, -65537, 0, 0, 65534, 0, 0, -2, 0, 0, 131070, 0, 0, 131071, 0, 0, 131072, 0, 0, 131073, 0, 0, 131074, 0, 0, 65539, 0, 0, 3, 0, 0, -65533, 0, 0, -131069, 0, 0, -131070, 0, 0, -196607, 0, 0, -131073, 0, 0, -65538, 0, 0, -65539, 0, 0, -3, 0, 0, 65533, 0, 0, 131069, 0, 0, 196606, 0, 0, 196607, 0, 0, 196608, 0, 0, -196608, 0, 0)

[node name="WaveSpawner" parent="GM" instance=ExtResource("3_jtl8h")]
scale = Vector2(0.5, 0.5)

[node name="Camera2D" type="Camera2D" parent="GM"]
scale = Vector2(0.5, 0.5)
limit_left = -640
limit_top = -360
limit_right = 640
limit_bottom = 360
script = ExtResource("6_5fofq")

[connection signal="button_pressed" from="CanvasLayer/UI/HexMenu" to="GM" method="_on_hex_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/UI/StartButton/MarginContainer/Button" to="GM" method="_on_start_button_pressed"]
[connection signal="wave_done" from="GM/WaveSpawner" to="GM" method="_on_wave_spawner_wave_done"]

[editable path="CanvasLayer/UI/StartButton"]
